@@ -2,6 +2,7 @@ public class CalendarTester {
 public static void main(String[] args) 
 {
 	CalendarView cv = new CalendarView();
-	cv.createWindow();
+	cv.paintMonthView();
+//	cv.createEventBox();
 }
 }
