@@ -1,4 +1,3 @@
-
 import java.awt.Component;
 import java.awt.Graphics;
 import java.io.IOException;
